# PROTOTYPE_ECU

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  BRANDING.md  BUILD.md  CAPABILITY_MATRIX.md  CHANGELOG.md  CODING_STANDARDS.md  CONTEXT_LIFECYCLE.md  CONTRIBUTING.md  CURRENT_STATE.md  ENGINEERING_DEBT.md  ENGINEERING_KPIS.md  ENGINEERING_REVIEW.md  MASTER_DIRECTIVE.md  PROJECT_DASHBOARD.md  PROJECT_RULES.md  PROJECT_STATUS.md  QA_ENGINEERING_REVIEW.md  README.md  REPOSITORY_MANIFEST.md  SESSION.md  SESSION_HANDOFF.md  START_HERE.md  TECH_DEBT.md  TODO.md  TRACER_BULLETS.md
.github/: PULL_REQUEST_TEMPLATE.md
01_Architecture/: README.md  bootloader-architecture.md  firmware-architecture.md  hardware-architecture.md  protocol-architecture.md  rusefi-architecture-audit.md  security-architecture.md  studio-architecture.md
03_PCB/: README.md
04_Firmware/: BUILD_PIPELINE.md  README.md  UPSTREAM_SYNC.md
08_Testing/: README.md  sa_vehicle_schema.sql  sa_vehicle_seed.sql  sa_vehicles_connection.json
09_Compliance/: README.md
10_Documentation/: TEN8_Cloud_Architecture.md  TEN8_Desktop_Architecture.md  TEN8_Hardware_Architecture.md  TEN8_Mobile_Architecture.md  TEN8_Protocol.md  TEN8_Security_Architecture.md
10_Market_Research/: README.md
11_Documentation/: CHANGELOG.md  LICENSE_NOTES.md  PROJECT_STATUS.md  README.md  ROADMAP.md
12_BOM/: README.md
docs/: BASELINE.md  (+6 more)
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/.cargo/: config.toml
studio/src-tauri/capabilities/: serial.json
studio/src-tauri/src/: lib.rs  main.rs  serial.rs
(+242 files in other folders)
