[package]
name = "prototype-studio"
version = "0.1.0"
description = "7100CPT Desktop Tuning Studio"
authors = ["ECU Platform"]
edition = "2021"

[lib]
name = "prototype_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
